fix tcp socket timeout